--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,12 @@
     "airbnb-base",
     "plugin:import/errors",
     "plugin:import/warnings",
+    "plugin:jest/all",
     "prettier"
   ],
   "env": {
     "node": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   }
 }
