Simplify code, bump deps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "airbnb-base",
     "plugin:import/errors",
     "plugin:import/warnings",
-    "plugin:jest/all",
+    "plugin:jest/recommended",
     "prettier"
   ],
   "env": {
