--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "name": "starter-node-javascript",
   "scripts": {
-    "build": "rimraf ./dist && babel ./src -d ./dist",
+    "build": "rimraf ./build && babel ./src -d ./build",
     "dev": "babel-node ./src",
     "lint": "eslint src/**/*.js",
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.15",
-    "@babel/eslint-parser": "^7.13.14",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
     "@babel/node": "^7.13.13",
-    "@babel/preset-env": "^7.13.15",
-    "@types/jest": "^26.0.22",
+    "@babel/preset-env": "^7.14.1",
+    "@types/jest": "^26.0.23",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.5",
+    "eslint": "^7.25.0",
+    "eslint-config-mkvlrn": "^12.1.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
     "rimraf": "^3.0.2"
   }
 }
