--- a/package.json
+++ b/package.json
@@ -6,16 +6,52 @@
     "lint": "eslint src/**/*.js",
     "test": "jest"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
-    "@babel/node": "^7.13.13",
-    "@babel/preset-env": "^7.14.1",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
     "@types/jest": "^26.0.23",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.25.0",
-    "eslint-config-mkvlrn": "^12.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-mkvlrn": "^12.2.0",
     "jest": "^26.6.3",
     "rimraf": "^3.0.2"
-  }
+  },
+  "eslintConfig": {
+    "extends": [
+      "mkvlrn/js"
+    ]
+  },
+  "eslintIgnore": [
+    "build"
+  ],
+  "prettier": {
+    "overrides": [
+      {
+        "files": [
+          "*.json",
+          "*.jsonc"
+        ],
+        "options": {
+          "parser": "json-stringify"
+        }
+      }
+    ]
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-node",
+    "verbose": true
+  },
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        }
+      }
+    ]
+  ]
 }
