Fix babel config in package.json

--- a/package.json
+++ b/package.json
@@ -44,14 +44,16 @@
     "testEnvironment": "jest-environment-node",
     "verbose": true
   },
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "esmodules": true
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "esmodules": true
+          }
         }
-      }
+      ]
     ]
-  ]
+  }
 }
